fix attachment h align

--- a/styles/shared/post.scss
+++ b/styles/shared/post.scss
@@ -563,6 +563,8 @@ $post-line-height: rem(20px);
 
   .embedly-card {
     overflow: hidden;
+    display: flex;
+    justify-content: center;
   }
 
   .embedly-card-hug {
